Migrate CssIssuesTest to scanner-integration-tester